<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="settings">Settings</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="ok">OK</string>
    <string name="expense">Expense</string>
    <string name="expenses">Expenses</string>
    <string name="income">Income</string>
    <string name="incomes">Income</string>
    <string name="transfer">Transfer</string>
    <string name="currencies_zero">Currencies</string>
    <string name="currencies_one">Currency</string>
    <string name="currencies_two">Currencies</string>
    <string name="currencies_few">Currencies</string>
    <string name="currencies_many">Currencies</string>
    <string name="currencies_other">Currencies</string>
    <string name="currency_code">Currency code</string>
    <string name="create">Create</string>
    <string name="main_currency">Main currency</string>
    <string name="set_as_main_currency">Set as main currency</string>
    <string name="refresh_rate">Refresh rate</string>
    <string name="refresh_rates">Refresh rates</string>
    <string name="exchange_rate">Exchange rate</string>
    <string name="accounts_zero">Accounts</string>
    <string name="accounts_one">Account</string>
    <string name="accounts_two">Accounts</string>
    <string name="accounts_few">Accounts</string>
    <string name="accounts_many">Accounts</string>
    <string name="accounts_other">Accounts</string>
    <string name="include_in_totals">Include in totals</string>
    <string name="balance">Balance</string>
    <string name="title">Title</string>
    <string name="note">Note</string>
    <string name="select">Select</string>
    <string name="select_color">Select color</string>
    <string name="thousands_separator">Thousands separator</string>
    <string name="decimal_separator">Decimal separator</string>
    <string name="decimals_count">Decimals count</string>
    <string name="symbol">Symbol</string>
    <string name="symbol_position">Symbol position</string>
    <string name="none">None</string>
    <string name="comma">Comma</string>
    <string name="dot">Dot</string>
    <string name="space">Space</string>
    <string name="close_right">Close right</string>
    <string name="far_right">Far right</string>
    <string name="close_left">Close left</string>
    <string name="far_left">Far left</string>
    <string name="calculator">Calculator</string>
    <string name="categories_zero">Categories</string>
    <string name="categories_one">Category</string>
    <string name="categories_two">Categories</string>
    <string name="categories_few">Categories</string>
    <string name="categories_many">Categories</string>
    <string name="categories_other">Categories</string>
    <string name="transaction_type">Transaction type</string>
    <string name="account_balance_update">Account balance update</string>
    <string name="color">Color</string>
    <string name="transactions_zero">Transactions</string>
    <string name="transactions_one">Transaction</string>
    <string name="transactions_two">Transactions</string>
    <string name="transactions_few">Transactions</string>
    <string name="transactions_many">Transactions</string>
    <string name="transactions_other">Transactions</string>
    <string name="overview">Overview</string>
    <string name="open_navigation">Open navigation</string>
    <string name="close_navigation">Close navigation</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="user">User</string>
    <string name="tags_zero">Tags</string>
    <string name="tags_one">Tag</string>
    <string name="tags_two">Tags</string>
    <string name="tags_few">Tags</string>
    <string name="tags_many">Tags</string>
    <string name="tags_other">Tags</string>
    <string name="period">Period</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="date">Date</string>
    <string name="include_in_reports">Include in reports</string>
    <string name="confirmed">Confirmed</string>
    <string name="pending">Pending</string>
    <string name="your_data">Your data</string>
    <string name="backup">Backup</string>
    <string name="clear_and_restore">Clear and restore</string>
    <string name="file">File</string>
    <string name="reports">Reports</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="categories_report">Categories report</string>
    <string name="export_csv">Export CSV</string>
    <string name="change_log">Change log</string>
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="last_updated">Last updated</string>
    <string name="readme">Readme</string>
    <string name="rate">Rate</string>
    <string name="community">Community</string>
    <string name="export">Export</string>
    <string name="import_backup">Import backup</string>
    <string name="create_backup">Create backup</string>
    <string name="no_category">No category</string>
    <string name="trends">Trends</string>
    <string name="security">Security</string>
    <string name="lock">Lock</string>
    <string name="unlock">Unlock</string>
    <string name="create_password">Create password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="show_all">Show all</string>
    <string name="translate">Translate</string>
    <string name="pattern">Pattern</string>

    <string name="f_change_to_x">Change to %s</string>
    <string name="f_current_main_currency_is_x">Current main currency is %s</string>
    <string name="f_x_y_will_be_deleted">%1$d %2$s will be deleted</string>

    <string name="l_refresh_rates_daily">Refresh rates every day</string>
    <string name="l_currency_exists">This currency already exists</string>
    <string name="l_please_enter_currency_code">Please enter currency code</string>
    <string name="l_delete_short">DEL</string>
    <string name="l_delete_confirmation">Are you sure you want to delete?</string>
    <string name="l_about_new_issue">Issues &amp; feature requests. Read the README first.</string>
    <string name="l_about_rate">Like the app? Rate it on Google Play.</string>
    <string name="l_about_community">Want to see what\'s coming next? Join the community.</string>
    <string name="l_about_translate">You can help to translate this app to your language.</string>

    <string name="error_unlock_password">Password doesn\'t match. Try again.</string>

    <string name="c_food">Food</string>
    <string name="c_leisure">Leisure</string>
    <string name="c_clothing">Clothing</string>
    <string name="c_transportation">Transportation</string>
    <string name="c_health_and_beauty">Health and Beauty</string>
    <string name="c_household">Household</string>
    <string name="c_bills_and_utilities">Bills and Utilities</string>
    <string name="c_salary">Salary</string>

    <!-- Accessibility description sent when user starts drawing a lock pattern. [CHAR LIMIT=NONE] -->
    <string name="lockscreen_access_pattern_start">Pattern started</string>
    <!-- Accessibility description sent when the pattern times out and is cleared. [CHAR LIMIT=NONE] -->
    <string name="lockscreen_access_pattern_cleared">Pattern cleared</string>
    <!-- Accessibility description sent when user adds a cell to the pattern. [CHAR LIMIT=NONE]  -->
    <string name="lockscreen_access_pattern_cell_added">Cell added</string>
    <!-- Accessibility description sent when user completes drawing a pattern. [CHAR LIMIT=NONE] -->
    <string name="lockscreen_access_pattern_detected">Pattern completed</string>

</resources>
