<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Container.Edit">

    <EditText
        android:id="@+id/title_ET"
        style="@style/EditText"
        android:hint="@string/title"
        android:inputType="textCapWords" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_normal">

        <Button
            android:id="@+id/currency_B"
            style="@style/Button.Select"
            android:layout_width="wrap_content"
            android:hint="@string/currency" />

        <Button
            android:id="@+id/balance_B"
            style="@style/Button.Select"
            android:layout_marginLeft="@dimen/space_normal"
            android:gravity="right|center_vertical"
            android:hint="@string/balance" />

    </LinearLayout>

    <EditText
        android:id="@+id/note_ET"
        style="@style/EditText"
        android:layout_marginTop="@dimen/space_normal"
        android:hint="@string/note"
        android:inputType="textCapSentences" />

</LinearLayout>
