<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".ui.currencies.CurrencyEditActivity">

    <ScrollView
        style="@style/ScrollView"
        android:layout_height="0px"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/keyline">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom">

                <Button
                    android:id="@+id/dateButton"
                    style="@style/Button.Borderless.Select"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:hint="@string/date"
                    tools:text="August 17" />

                <Button
                    android:id="@+id/timeButton"
                    style="@style/Button.Borderless.Select"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end|bottom"
                    android:hint="@string/date"
                    tools:text="16:27" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_large"
                android:gravity="bottom">

                <ImageButton
                    android:id="@+id/transactionTypeImageButton"
                    style="@style/Button.Borderless.Select"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/transaction_type"
                    android:gravity="end|bottom"
                    android:minWidth="@dimen/big_touch_size"
                    android:scaleType="centerInside"
                    tools:src="@drawable/ic_category_type_expense"
                    tools:text="1,000.00 $" />

                <Button
                    android:id="@+id/amountButton"
                    style="@style/Button.Borderless.Select"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end|bottom"
                    tools:text="1,000.00 $" />

            </LinearLayout>

            <Button
                android:id="@+id/exchangeRateButton"
                style="@style/Button.Borderless.Select"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_large"
                android:gravity="end|bottom"
                android:visibility="gone"
                tools:text="0.83548" />

            <Button
                android:id="@+id/amountToButton"
                style="@style/Button.Borderless.Select"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_large"
                android:gravity="end|bottom"
                android:visibility="gone"
                tools:text="835.48 £" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_large">

                <Button
                    android:id="@+id/accountFromButton"
                    style="@style/Button.Borderless.Select"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/from" />

                <Button
                    android:id="@+id/accountToButton"
                    style="@style/Button.Borderless.Select"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/to"
                    android:visibility="gone" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_large"
                android:paddingLeft="4dp"
                tools:ignore="RtlHardcoded,RtlSymmetry">

                <ImageView
                    android:id="@+id/colorImageView"
                    android:layout_width="@dimen/min_touch_size"
                    android:layout_height="@dimen/min_touch_size"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/space_normal"
                    android:layout_marginRight="@dimen/space_normal"
                    android:src="@drawable/circle"
                    tools:ignore="ContentDescription" />

                <Button
                    android:id="@+id/categoryButton"
                    style="@style/Button.Borderless.Select"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/categories_one" />

            </LinearLayout>

            <Button
                android:id="@+id/tagsButton"
                style="@style/Button.Borderless.Select"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_large"
                android:hint="@string/tags_other" />

            <EditText
                android:id="@+id/noteEditText"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_large"
                android:gravity="bottom"
                android:hint="@string/note"
                android:inputType="textCapSentences|textMultiLine"
                android:minHeight="@dimen/recommended_touch_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_xlarge"
                android:orientation="vertical"
                android:paddingLeft="4dp"
                tools:ignore="RtlHardcoded,RtlSymmetry">

                <CheckBox
                    android:id="@+id/confirmedCheckBox"
                    style="@style/CheckBox.Field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/confirmed" />

                <CheckBox
                    android:id="@+id/includeInReportsCheckBox"
                    style="@style/CheckBox.Field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_large"
                    android:text="@string/include_in_reports" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <include layout="@layout/include_edit_buttons" />
</LinearLayout>