<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".ui.currencies.CurrencyEditActivity">

    <ScrollView
        style="@style/ScrollView"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="0px"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bg_brand"
                android:elevation="@dimen/elevation_header"
                android:padding="@dimen/keyline"
                tools:ignore="UnusedAttribute">

                <me.grantland.widget.AutofitLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/action_bar_size_2x">

                    <EditText
                        android:id="@+id/titleEditText"
                        style="@style/Text.Display3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/title"
                        android:inputType="textCapWords|textNoSuggestions"
                        android:textColor="?android:textColorPrimaryInverse"
                        android:textColorHint="?android:textColorSecondaryInverse" />

                </me.grantland.widget.AutofitLayout>

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_large"
                android:paddingLeft="@dimen/keyline"
                android:paddingRight="@dimen/keyline">

                <Button
                    android:id="@+id/currencyButton"
                    style="@style/Button.Borderless.Select"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/currencies_one"
                    tools:text="GBP" />

                <Button
                    android:id="@+id/balanceButton"
                    style="@style/Button.Borderless.Select"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/space_normal"
                    android:gravity="right|bottom"
                    android:hint="@string/balance"
                    tools:ignore="RtlHardcoded"
                    tools:text="1,234.56 £" />

            </LinearLayout>

            <EditText
                android:id="@+id/noteEditText"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/keyline"
                android:layout_marginRight="@dimen/keyline"
                android:layout_marginTop="@dimen/space_large"
                android:gravity="bottom"
                android:hint="@string/note"
                android:inputType="textCapSentences"
                android:minHeight="@dimen/recommended_touch_size" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="RtlHardcoded,RtlSymmetry">

                <CheckBox
                    android:id="@+id/includeInTotalsCheckBox"
                    style="@style/CheckBox.Field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/keyline"
                    android:layout_marginRight="@dimen/keyline"
                    android:layout_marginTop="@dimen/space_xxlarge"
                    android:text="@string/include_in_totals" />
            </FrameLayout>

        </LinearLayout>
    </ScrollView>

    <include layout="@layout/include_edit_buttons" />
</LinearLayout>