<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".ui.currencies.CurrencyEditActivity">

    <ScrollView
        style="@style/ScrollView"
        android:layout_height="0px"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/keyline">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom">

                <ImageButton
                    android:id="@+id/categoryType_IB"
                    style="@style/Button.Borderless.Select"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:src="@drawable/ic_action_arrow_down_small"
                    tools:stateListAnimator="@android:animator/fade_in"
                    tools:text="1,000.00 $" />

                <Button
                    android:id="@+id/amount_B"
                    style="@style/Button.Borderless.Select"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    tools:stateListAnimator="@android:animator/fade_in"
                    tools:text="1,000.00 $" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/accountFrom_B"
                    style="@style/Button.Borderless.Select"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/from"
                    tools:stateListAnimator="@android:animator/fade_in"
                    tools:text="Bank" />

                <Button
                    android:id="@+id/accountTo_B"
                    style="@style/Button.Borderless.Select"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/to"
                    tools:stateListAnimator="@android:animator/fade_in"
                    tools:text="Cash" />

            </LinearLayout>

            <Button
                android:id="@+id/category_B"
                style="@style/Button.Borderless.Select"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/keyline"
                android:drawableStart="@drawable/circle"
                android:hint="@string/from"
                tools:stateListAnimator="@android:animator/fade_in"
                tools:text="Bank" />

            <EditText
                android:id="@+id/note_ET"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/note"
                android:inputType="textCapSentences" />

        </LinearLayout>
    </ScrollView>

    <include layout="@layout/include_edit_buttons" />
</LinearLayout>